--- a/build.gradle
+++ b/build.gradle
@@ -31,3 +31,8 @@ dependencies {
 task wrapper(type: Wrapper) {
     gradleVersion = '2.14'
 }
+
+task execute(type:JavaExec) {
+   main = mainClass
+   classpath = sourceSets.main.runtimeClasspath
+}
