--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,12 @@
-/bin/
-/build/
-/gradle/
+*.class
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+
+/bin
+/build
+.gitignore
 /.gradle/
